<resources>
    <string name="app_name">Aplikasi Aiss</string>
    <string-array name="ArrayKesempatan">
        <item>Melanggar undang-undang lalu lintas, bayar denda di bank Rp 5.000</item>
        <item>Terima uang sewa dari bank Rp 10.000</item>
        <item>Maju sampai tari Guel, jika melalui start terima Rp 5.000</item>
        <item>Terima undian dari bank 2.000 rupiah</item>
        <item>Maju sampai tari Guel, jika melalui start terima Rp 5.000</item>
        <item>Anda berhak mengakuisisi 1 perusahaan yang dimiliki salah satu pemain</item>
        <item>Anda mendapat hadiah pertama teka-teki silang, terimalah 7.000</item>
        <item>Bayar di bank dana pembetulan jalan muka persil anda, tiap rumah 2.000, tiap hotel 5.000</item>
        <item>Maju sampai start</item>
        <item>Bayar asuransi Rp. 10.000</item>
        <item>Mabuk ditempat umum bayar denda di bank Rp 5.000</item>
        <item>Maju sampai tari topeng betawi</item>
        <item>Mundur 2 petak</item>
        <item>Bayar denda keterlambatan membayar hutang bank, sebesar 8.000 rupiah</item>
        <item>Maju 2 petak</item>
    </string-array>
    <string-array name="ArrayDana">
        <item>Terima warisan 5.000 rupiah</item>
        <item>Bayar denda Rp 5.000 atau mengambil kartu kesempatan</item>
        <item>Maju sampai start</item>
        <item>Maju 3 petak</item>
        <item>Merokok ditempat umum, bayar denda di bank Rp 3.000</item>
        <item>Anda boleh menjual saham anda saat ini.</item>
        <item>Kembali ke suku badui</item>
        <item>Hari ulang tahun anda, anda terima uang sebesar 2.000 rupiah dari masing-masing pemain.</item>
        <item>Terima bunga dari bank Rp 3.000</item>
        <item>Karena kesalahan bank, anda terima 10.000 rupiah</item>
        <item>Terima bunga 1.000 rupiah</item>
        <item>Bayar biaya rumah sakit Rp 10.000</item>
        <item>Mundur 3 petak</item>
        <item>Anda mendapatkan undian sebesar 5.000</item>
        <item>Merokok ditempat umum, bayar denda di bank Rp 3.000</item>
        <item>Anda boleh menjual saham anda saat ini.</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="guel">Tari Guel adalah salah satu tarian tradisional yang berasal dari budaya masyarakat Gayo di Aceh. Tarian ini cenderung berbeda dengan tarian-tarian tradisional Aceh kebanyakan, terutama dari segi geraknya. Tari Guel memiliki gerakan yang sangat khas dan penuh makna, bahkan terkesan bernuansa magis. Sehingga tak jarang membuat para penonton seakan terhipnotis dan terbawa suasana saat menyaksikannya. Tarian guel merupakan salah satu tarian tradisional yang cukup terkenal di Aceh, khususnya di kalangan masyarakat Gayo. Tarian ini biasanya sering ditampilkan di acara-acara adat maupun budaya yang diselenggarakan di sana.</string>
    <string name="tarian_guel">Tarian Guel</string>
    <string name="Aramba">Alat Musik Aramba (Arumba) merupakan bagian dari alat musik tradisional Sumatera Utara (Sumut), tepatnya dari kabupaten Nias. Alat ini dipakai oleh warga setempat dalam acara kesenian daerah, seperti penikahan. Dimainkan oleh satu orang, alat musik Aramba termasuk jenis musik alat musik ideofon. Bagi warga Nias, alat musik ini diyakini mempunyai nilai keramat alias mistis.</string>
    <string name="alat_musik_aramba">Alat Musik Aramba</string>
    <string name="AdatKabaya">Rumah adat Provinsi DKI Jakarta disebut dengan rumah kebaya. Rumah ini adalah ciri khas suku Betawi. Atap rumah kebaya berbentuk pelana yang dilipat. Jika dilihat dari samping, atapnya seperti lipatan kebaya. Di teras rumah biasanya tersedia meja dan kursi untuk menerima tamu atau minum teh di sore hari bersama keluarga. Rumah kebaya biasa dicat dengan warna-warna cerah</string>
    <string name="Kolintang">Kolintang adalah salah satu alat musik tradisional masyarakat Minahasa di Sulawesi Utara. Alat musik ini terbuat dari kayu khusus yang disusun dan dimainkan dengan cara dipukul. Sekilas Kolintang ini hampir sama dengan alat musik Gambang dari Jawa, namun yang membedakan adalah nada yang dihasilkan lebih lengkap dan cara memainkannya sedikit berbeda.</string>
    <string name="madura">Suku Madura, adalah salah satu suku di provinsi Jawa Timur, yang mendiami pulau Madura dan pulau-pulau kecil sekitarnya. Populasi suku Madura termasuk yang ke-3 terbesar di Indonesia, diperkirakan lebih dari 6.800.000 orang. Orang Madura tersebar di pulau Madura dan pulau-pulau kecil sekitarnya, yaitu pulau Gili Raja, Sapudi, Raas dan Kangean. Penyebaran orang Madura tidak hanya di Jawa Timur saja, tapi juga terdapat di provinsi lain bahkan di luar pulau Jawa seperti di Kalimantan bahkan sampai ke Malaysia. Wilayah pemukiman orang Madura, terdiri dari 4 kabupaten, yaitu: Bangkalan Sampang Pamekasan Sumenep</string>
    <string name="salasoo">Rumah adat Riau dinamakan selaso jatuh kembarkarena memiliki selasar yang lebih rendah dibandingkan dengan ruang tengah dan berbentuk sama pada sisi kiri dan kanan tangga masuk. Rumah adat ini tidak digunakan sebagai rumah tinggal, tetapi digunakan sebagai balai pertemuan adat. Bagian atap rumah dihiasi dengan ukiran etnik Melayu serupa flora dan fauna. Bagian tiang, dinding, dan lantai terbuat dari kayu, sedangkan bagian atap terbuat dari rumbia.</string>
    <string name="adatsalaso">Rumah Adat selaso jatuh kembar</string>
    <string name="saluang">Alat musik Saluang merupakan alat musik tradisional Indonesia. Lebih lanjut, Saluang dikenal sebagai alat musik tradisional khas Minangkabau, Sumatera Barat (Sumbar) yang memiliki banyak nama – nama alat musik tradisional. Terbuat dari bambu tipis atau talang, Saluang adalah salah satu kekayaan budaya Indonesia dalam bidang kesenian musik tradisional. Beberapa acara kesenian daerah masih memakainya. Bukan sekedar mengenalkan alat musik Saluang, namun lebih kepada upaya menjaga budaya lokal agar tidak pupus di telan zaman.</string>
    <string name="alat_musik_saluang">Alat Musik Saluang</string>
    <string name="suku_sunda">Suku Sunda</string>
    <string name="sund">Suku Sunda adalah kelompok etnis yang berasal dari bagian barat pulau Jawa, Indonesia, dengan istilah Tatar Pasundan yang mencakup wilayah administrasi provinsi Jawa Barat, Banten, Jakarta, Lampung dan wilayah barat Jawa Tengah (Banyumasan). Suku Sunda merupakan etnis kedua terbesar di Indonesia. Sekurang-kurangnya 15,2% penduduk Indonesia merupakan orang Sunda. Mayoritas orang Sunda beragama Islam, akan tetapi ada juga sebagian kecil yang beragama kristen, Hindu, dan Sunda Wiwitan/Jati Sunda. Agama Sunda Wiwitan masih bertahan di beberapa komunitas pedesaan suku Sunda, seperti di Kuningan dan masyarakat suku Baduy di Lebak Banten yang berkerabat dekat dan dapat dikategorikan sebagai suku Sunda. Orang Sunda dikenal memiliki sifat optimistis, ramah, sopan, dan riang.[2] Orang Portugis mencatat dalam Suma Oriental bahwa orang sunda bersifat jujur dan pemberani. Orang sunda juga adalah yang pertama kali melakukan hubungan diplomatik secara sejajar dengan bangsa lain.</string>
    <string name="todo">TODO</string>
    <string name="alat_musik_gambus">Alat Musik Gambus</string>
    <string name="alat_musik_kolintang">Alat Musik Kolintang</string>
    <string name="tpeng">Tari topeng merupakan tarian tradisional yang berasal dari Cirebon, Jawa Barat. Tarian ini dipentaskan oleh penari-penari yang memakai topeng. Keunikan dari tarian ini adalah topeng yang dikenakan mempunyai karakter yang berbeda-beda. Penari yang mementaskan Tari Topeng disebut Dalang. Karena setiap penari memerankan karakter pada topeng yang dikenakan. Tarian ini dapat dipentaskan oleh satu orang penari dan juga dapat dipentaskan oleh beberapa orang penari.</string>
    <string name="apa">Aplikasi ini dibuat oleh DetechtiveCode Surabaya, Dilarang meng-Decompile meng Recompile, Memodifikasi, Merubah, Menggandakan dengan merubah nama aplikasi selain Aplikasi Aiss dan Tanda Pembuat Aplikasi. Kami selaku developer berhak menggungat meminta siapa saja yang menyalah gunakan suatu karya cipta. Hasil karya Cipta aplikasi sudah memiliki persetujuan dengan Pihak terkait. Kontributor Arkhi Muttaqina, Akhmad Hilmy Z, Nino Fachrurozy </string>
</resources>