<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidDomInspection -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/m_bgalat"
    tools:context=".maramba">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="235dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/m_aramba"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="90dp"

        android:text="@string/alat_musik_aramba"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/Aramba"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="17sp" />


</LinearLayout>