<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".msunda"
    android:background="@drawable/m_bgsuku">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="235dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/m_sunda"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="90dp"
        android:text="@string/suku_sunda"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:scrollbarSize="1dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sund"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17sp" />
        </RelativeLayout>
    </ScrollView>

</LinearLayout>